syntax = "proto3";

package cuddlyproto;

import "common.proto";

// Heartbeat service definition
service HeartbeatService {
    rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
}

// Heartbeat request message
message HeartbeatRequest {
    string node_id = 1;  // Unique identifier for the node sending the heartbeat
}

// Heartbeat response message
message HeartbeatResponse {
    bool success = 1;    // Indicates whether the heartbeat was received successfully
    cuddlyproto.Error error = 2;  // Error message if the heartbeat was not received successfully
}
